--- a/index-light.html
+++ b/index-light.html
@@ -59,6 +59,97 @@
 </div>
 <!--Loader End-->
 
+<style>
+@import url("https://fonts.googleapis.com/css?family=Mukta:700");
+
+button {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  outline: none;
+  border: 0;
+  vertical-align: middle;
+  text-decoration: none;
+  background: transparent;
+  padding: 0;
+  font-size: inherit;
+  font-family: inherit;
+}
+button.learn-more {
+  width: 12rem;
+  height: auto;
+}
+button.learn-more .circle {
+  -webkit-transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+  transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+  position: relative;
+  display: block;
+  margin: 0;
+  width: 3rem;
+  height: 3rem;
+  background: #282936;
+  border-radius: 1.625rem;
+}
+button.learn-more .circle .icon {
+  -webkit-transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+  transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  background: #fff;
+}
+button.learn-more .circle .icon.arrow {
+  -webkit-transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+  transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+  left: 0.625rem;
+  width: 1.125rem;
+  height: 0.125rem;
+  background: none;
+}
+button.learn-more .circle .icon.arrow::before {
+  position: absolute;
+  content: '';
+  top: -0.25rem;
+  right: 0.0625rem;
+  width: 0.625rem;
+  height: 0.625rem;
+  border-top: 0.125rem solid #fff;
+  border-right: 0.125rem solid #fff;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+button.learn-more .button-text {
+  -webkit-transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+  transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  padding: 0.75rem 0;
+  margin: 0 0 0 1.85rem;
+  color: #282936;
+  font-weight: 700;
+  line-height: 1.6;
+  text-align: center;
+  text-transform: uppercase;
+}
+button:hover .circle {
+  width: 100%;
+}
+button:hover .circle .icon.arrow {
+  background: #fff;
+  -webkit-transform: translate(1rem, 0);
+          transform: translate(1rem, 0);
+}
+button:hover .button-text {
+  color: #fff;
+}
+
+
+</style>
+
 <!--Header Start-->
 <header>
 
@@ -164,7 +255,7 @@
                          data-transform_in="x:-50px;opacity:0;s:2000;e:Power3.easeOut;"
                          data-transform_out="s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;"
                          data-start="1000" data-splitin="none" data-splitout="none">
-                        <h2 class="font-weight-100">The Wexim</h2>
+                        <h2 class="font-weight-100">Understand who</h2>
                     </div>
                     <!-- LAYER NR. 2 -->
                     <div class="tp-caption tp-resizeme"
@@ -175,10 +266,10 @@
                          data-textalign="['center','center','center','center']"
                          data-transform_idle="o:1;" data-transform_in="z:0;rX:0;rY:0;rZ:0;sX:0.9;sY:0.9;skX:0;skY:0;opacity:0;s:1500;e:Power3.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;"
                          data-start="1200" data-splitin="none" data-splitout="none">
-                        <h2 class="font-weight-600">A Creative Agency</h2>
+                        <h2 class="font-weight-600">you truly are.</h2>
                     </div>
                     <!-- LAYER NR. 3 -->
-                    <div class="tp-caption tp-resizeme"
+                    <!-- <div class="tp-caption tp-resizeme"
                          data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
                          data-y="['middle','middle','middle','middle']" data-voffset="['0','0','0','0']"
                          data-whitespace="nowrap" data-responsive_offset="on"
@@ -189,7 +280,7 @@
                          data-transform_out="s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;"
                          data-start="1000" data-splitin="none" data-splitout="none">
                         <h2 class="font-weight-100">Digital World</h2>
-                    </div>
+                    </div> -->
                     <!-- LAYER NR. 4 -->
                     <div class="tp-caption tp-resizeme"
                          data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
@@ -202,7 +293,7 @@
                          data-transform_out="s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;"
                          data-mask_in="x:0px;y:0px;s:inherit;e:inherit;"
                          data-start="1500" data-splitin="none" data-splitout="none">
-                        <p>The Best Multipurpose One Page Template in Market</p>
+                        <p>Powerful, scientifically validated personality tests to help you grow and find your way in life.</p>
                     </div>
                     <!-- LAYER NR. 5 -->
                     <div class="tp-caption tp-resizeme"
@@ -388,6 +479,8 @@
 <!--About Start-->
 <section id="about" class="bg-light">
     <div class="container-fluid">
+            <h1 style="text-align: center; font-size: 350%">Find Your Personality Type</h1>
+            <p style="text-align: center; ">Understand your personality type deeply with the most comprehensive personality type test available online.</p><br><br>
         <div class="row align-items-center">
             <div class="col-lg-6 p-0">
                 <!--Feature Image Half-->
@@ -396,23 +489,150 @@
             <div class="col-lg-6">
                 <div class="about-box">
                     <div class="title">
-                        <h6 class="third-color mb-3">TRY IT NOW</h6>
-                        <h2 class="mb-3">Startups Will Love It.</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce nisi enim, vulputate at justo tristique, tempor sagittis dolor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec sit amet ligula consequat urna posuere convallis.</p>
+                        <h6 class="third-color mb-3">PRICE: FREE BASIC REPORT</h6>
+                        <h3 class="mb-3">The TypeFinder® Personality Test</h3>
+                        <p>
+                        This updated and expanded edition of our bestselling TypeFinder assessment goes deeper than any personality test you've taken before. Based on original research into the nuances of personality type, the TypeFinder reveals not only your four-letter personality type code, but exactly how your one-of-a-kind personality profile fits within that type. Your results answer questions like:
+<br><br><ul style="list-style-type:disc;color: rgb(109, 109, 109); margin-left: 50px">
+<li>  How can I decide, once and for all, what my type is?</li>
+<li>Why are there some parts of my personality that don't seem to fit my type?</li>
+<li>Why do I get different results when I take different personality tests?</li> 
+</ul><br>
+<p style="color: rgb(109, 109, 109)">
+The TypeFinder shows how the 23 facets of your personality make up your unique personality fingerprint. You'll discover how well you match up with all sixteen of the personality type profiles, the parts of your personality that are typical (and atypical) for your type, and how you can deeply understand your individual traits, characteristics, and preferences.
+</p>
+
+                        </p>
+                        <br>
+                        <div id="container">
+                        <button class="learn-more">
+                            <span class="circle" aria-hidden="true">
+                            <span class="icon arrow"></span>
+                            </span>
+                            <span class="button-text">Learn More</span>
+                        </button>
+                        </div>
                     </div>
                     <!--Skill-->
-                    <ul class="about-skill">
-                        <!--Item-->
+                    <!-- <ul class="about-skill">
+
                         <li class="about-item">
                             <h5 class="mb-3"><i class="gradient-text1 fa fa-comments-o" aria-hidden="true"></i> 24/7 Support</h5>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit autem doloremque.</p>
                         </li>
-                        <!--Item-->
                         <li class="about-item">
                             <h5 class="mb-3"><i class="gradient-text1 fa fa-code" aria-hidden="true"></i> Validate Code</h5>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit autem doloremque.</p>
                         </li>
-                    </ul>
+                    </ul> -->
+
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section id="about" class="bg-light">
+    <div class="container-fluid">
+            <h1 style="text-align: center; font-size: 350%">Find Your Personality Type</h1>
+            <p style="text-align: center; ">Understand your personality type deeply with the most comprehensive personality type test available online.</p><br><br>
+        <div class="row align-items-center">
+            <div class="col-lg-6 p-0">
+                <!--Feature Image Half-->
+                <img src="http://themesindustry.com/html/wexim-2020/images/half-block2.jpg" class="feature-half-two" alt="image">
+            </div>
+            <div class="col-lg-6">
+                <div class="about-box">
+                    <div class="title">
+                        <h6 class="third-color mb-3">PRICE: FREE BASIC REPORT</h6>
+                        <h3 class="mb-3">The TypeFinder® Personality Test</h3>
+                        <p>
+                        This updated and expanded edition of our bestselling TypeFinder assessment goes deeper than any personality test you've taken before. Based on original research into the nuances of personality type, the TypeFinder reveals not only your four-letter personality type code, but exactly how your one-of-a-kind personality profile fits within that type. Your results answer questions like:
+<br><br><ul style="list-style-type:disc;color: rgb(109, 109, 109); margin-left: 50px">
+<li>  How can I decide, once and for all, what my type is?</li>
+<li>Why are there some parts of my personality that don't seem to fit my type?</li>
+<li>Why do I get different results when I take different personality tests?</li> 
+</ul><br>
+<p style="color: rgb(109, 109, 109)">
+The TypeFinder shows how the 23 facets of your personality make up your unique personality fingerprint. You'll discover how well you match up with all sixteen of the personality type profiles, the parts of your personality that are typical (and atypical) for your type, and how you can deeply understand your individual traits, characteristics, and preferences.
+</p>
+
+                        </p>
+                        <br>
+                        <div id="container">
+                        <button class="learn-more">
+                            <span class="circle" aria-hidden="true">
+                            <span class="icon arrow"></span>
+                            </span>
+                            <span class="button-text">Learn More</span>
+                        </button>
+                        </div>
+                    </div>
+                    <!--Skill-->
+                    <!-- <ul class="about-skill">
+
+                        <li class="about-item">
+                            <h5 class="mb-3"><i class="gradient-text1 fa fa-comments-o" aria-hidden="true"></i> 24/7 Support</h5>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit autem doloremque.</p>
+                        </li>
+                        <li class="about-item">
+                            <h5 class="mb-3"><i class="gradient-text1 fa fa-code" aria-hidden="true"></i> Validate Code</h5>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit autem doloremque.</p>
+                        </li>
+                    </ul> -->
+
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section id="about" class="bg-light">
+    <div class="container-fluid">
+            <h1 style="text-align: center; font-size: 350%">Find Your Personality Type</h1>
+            <p style="text-align: center; ">Understand your personality type deeply with the most comprehensive personality type test available online.</p><br><br>
+        <div class="row align-items-center">
+            <div class="col-lg-6 p-0">
+                <!--Feature Image Half-->
+                <img src="http://themesindustry.com/html/wexim-2020/images/half-block2.jpg" class="feature-half-two" alt="image">
+            </div>
+            <div class="col-lg-6">
+                <div class="about-box">
+                    <div class="title">
+                        <h6 class="third-color mb-3">PRICE: FREE BASIC REPORT</h6>
+                        <h3 class="mb-3">The TypeFinder® Personality Test</h3>
+                        <p>
+                        This updated and expanded edition of our bestselling TypeFinder assessment goes deeper than any personality test you've taken before. Based on original research into the nuances of personality type, the TypeFinder reveals not only your four-letter personality type code, but exactly how your one-of-a-kind personality profile fits within that type. Your results answer questions like:
+<br><br><ul style="list-style-type:disc;color: rgb(109, 109, 109); margin-left: 50px">
+<li>  How can I decide, once and for all, what my type is?</li>
+<li>Why are there some parts of my personality that don't seem to fit my type?</li>
+<li>Why do I get different results when I take different personality tests?</li> 
+</ul><br>
+<p style="color: rgb(109, 109, 109)">
+The TypeFinder shows how the 23 facets of your personality make up your unique personality fingerprint. You'll discover how well you match up with all sixteen of the personality type profiles, the parts of your personality that are typical (and atypical) for your type, and how you can deeply understand your individual traits, characteristics, and preferences.
+</p>
+
+                        </p>
+                        <br>
+                        <div id="container">
+                        <button class="learn-more">
+                            <span class="circle" aria-hidden="true">
+                            <span class="icon arrow"></span>
+                            </span>
+                            <span class="button-text">Learn More</span>
+                        </button>
+                        </div>
+                    </div>
+                    <!--Skill-->
+                    <!-- <ul class="about-skill">
+
+                        <li class="about-item">
+                            <h5 class="mb-3"><i class="gradient-text1 fa fa-comments-o" aria-hidden="true"></i> 24/7 Support</h5>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit autem doloremque.</p>
+                        </li>
+                        <li class="about-item">
+                            <h5 class="mb-3"><i class="gradient-text1 fa fa-code" aria-hidden="true"></i> Validate Code</h5>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit autem doloremque.</p>
+                        </li>
+                    </ul> -->
 
                 </div>
             </div>
@@ -420,6 +640,7 @@
     </div>
 </section>
 <!--About End-->
+
 
 <!--Features Start-->
 <section id="feature">
@@ -643,7 +864,7 @@
                         <div class="cbp-l-caption-alignCenter center-block">
                             <div class="cbp-l-caption-body">
                                 <div class="plus"></div>
-                                <h5 class="text-white mb-1">Latest Work</h5>
+                                <h5 class="text-white mb-1">SOMETHING TO READ</h5>
                                 <p class="text-white">See Our Amazing Work</p>
                             </div>
                         </div>
@@ -1033,8 +1254,8 @@
                 <!--Blog Content-->
                 <div class="blog-text">
                     <h6 class="third-color mb-3">January 14, 2019</h6>
-                    <h2>Living Your Dreams</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmodt temp to the incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis a nostr a exercitation ullamco laboris nisi ut aliquip.</p>
+                    <h2>How INTPs Mistype Themselves (and Why It Happens)</h2>
+                    <p>It can be difficult for anyone to decide which of Myers and Briggs' 16 personality types fits them...</p>
                     <a href="http://themesindustry.com/html/wexim-2020/blog-left.html" class="btn btn-large btn-gradient btn-rounded mt-4">Learn More</a>
                 </div>
             </div>
@@ -1051,8 +1272,8 @@
                 <!--Blog Content-->
                 <div class="blog-text">
                     <h6 class="third-color mb-3">August 20, 2019</h6>
-                    <h2>Design Your Website</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmodt temp to the incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis a nostr a exercitation ullamco laboris nisi ut aliquip.</p>
+                    <h2>How INTPs Mistype Themselves (and Why It Happens)</h2>
+                    <p>It can be difficult for anyone to decide which of Myers and Briggs' 16 personality types fits them...</p>
                     <a href="javascript:void(0);" class="btn btn-large btn-gradient btn-rounded mt-4">Learn More</a>
                 </div>
             </div>
