--- a/index-light.html
+++ b/index-light.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Page Title -->
-    <title>Wexim</title>
+    <title>LSI</title>
     <!-- Favicon -->
     <link rel="icon" href="http://themesindustry.com/html/wexim-2020/images/favicon.ico">
     <!-- Animate -->
@@ -401,9 +401,9 @@ a.link-copy {
     <!--Navigation-->
     <nav class="navbar navbar-top-default center-logo navbar-expand-lg navbar-simple navbar-dark nav-box-round">
         <div class="container">
-            <a href="javascript:void(0)" title="Logo" class="logo scroll">
+            <a href="javascript:void(0)" title="Logo" class="logo scroll" style='font-size:35px;margin-top:1px'>
                 <!--Logo Dark-->
-                <img src="http://themesindustry.com/html/wexim-2020/images/logo-bold-black.png" alt="logo" class="logo-dark default">
+                LSI
             </a>
 
             <!--Nav Links-->
@@ -466,11 +466,11 @@ a.link-copy {
 
             <div class="side-footer text-white w-100">
                 <ul class="social-icons-simple">
-                    <li><a class="facebook-text-hvr" href="javascript:void(0)"><i class="fa fa-facebook"></i> </a> </li>
+                    <li><a href="javascript:void(0)"><i class="fas fa-band-aid"></i></a> </li>
                     <li><a class="instagram-text-hvr" href="javascript:void(0)"><i class="fa fa-instagram"></i> </a> </li>
                     <li><a class="twitter-text-hvr" href="javascript:void(0)"><i class="fa fa-twitter"></i> </a> </li>
                 </ul>
-                <p class="text-white">&copy; 2019 Wexim. Made With Love by Themesindustry</p>
+                <p class="text-white">&copy; 2020 LSI</p>
             </div>
         </div>
     </div>
