--- a/index-light.html
+++ b/index-light.html
@@ -846,7 +846,7 @@ The TypeFinder shows how the 23 facets of your personality make up your unique p
                             <span class="circle" aria-hidden="true">
                             <span class="icon arrow"></span>
                             </span>
-                            <span class="button-text">Learn More</span>
+                            <span class="button-text"><a href="./wilio/Big_Five.html">Take Test</a></span>
                         </button>
                         </div>
                     </div>
@@ -900,7 +900,7 @@ The TypeFinder shows how the 23 facets of your personality make up your unique p
                             <span class="circle" aria-hidden="true">
                             <span class="icon arrow"></span>
                             </span>
-                            <span class="button-text">Learn More</span>
+                            <span class="button-text"><a href="./wilio/Brand_Personality.html">Take Test</a></span>
                         </button>
                         </div>
                     </div>
@@ -922,60 +922,7 @@ The TypeFinder shows how the 23 facets of your personality make up your unique p
         </div>
     </div>
 </section>
-<section id="about" class="bg-light">
-    <div class="container-fluid">
-            <h1 style="text-align: center; font-size: 350%">Find Your Personality Type</h1>
-            <p style="text-align: center; ">Understand your personality type deeply with the most comprehensive personality type test available online.</p><br><br>
-        <div class="row align-items-center">
-            <div class="col-lg-6 p-0">
-                <!--Feature Image Half-->
-                <img src="http://themesindustry.com/html/wexim-2020/images/half-block2.jpg" class="feature-half-two" alt="image">
-            </div>
-            <div class="col-lg-6">
-                <div class="about-box">
-                    <div class="title">
-                        <h6 class="third-color mb-3">PRICE: FREE BASIC REPORT</h6>
-                        <h3 class="mb-3">The TypeFinder® Personality Test</h3>
-                        <p>
-                        This updated and expanded edition of our bestselling TypeFinder assessment goes deeper than any personality test you've taken before. Based on original research into the nuances of personality type, the TypeFinder reveals not only your four-letter personality type code, but exactly how your one-of-a-kind personality profile fits within that type. Your results answer questions like:
-<br><br><ul style="list-style-type:disc;color: rgb(109, 109, 109); margin-left: 50px">
-<li>  How can I decide, once and for all, what my type is?</li>
-<li>Why are there some parts of my personality that don't seem to fit my type?</li>
-<li>Why do I get different results when I take different personality tests?</li> 
-</ul><br>
-<p style="color: rgb(109, 109, 109)">
-The TypeFinder shows how the 23 facets of your personality make up your unique personality fingerprint. You'll discover how well you match up with all sixteen of the personality type profiles, the parts of your personality that are typical (and atypical) for your type, and how you can deeply understand your individual traits, characteristics, and preferences.
-</p>
 
-                        </p>
-                        <br>
-                        <div id="container">
-                        <button class="learn-more">
-                            <span class="circle" aria-hidden="true">
-                            <span class="icon arrow"></span>
-                            </span>
-                            <span class="button-text">Learn More</span>
-                        </button>
-                        </div>
-                    </div>
-                    <!--Skill-->
-                    <!-- <ul class="about-skill">
-
-                        <li class="about-item">
-                            <h5 class="mb-3"><i class="gradient-text1 fa fa-comments-o" aria-hidden="true"></i> 24/7 Support</h5>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit autem doloremque.</p>
-                        </li>
-                        <li class="about-item">
-                            <h5 class="mb-3"><i class="gradient-text1 fa fa-code" aria-hidden="true"></i> Validate Code</h5>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit autem doloremque.</p>
-                        </li>
-                    </ul> -->
-
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
 <!--About End-->
 
 
