--- a/index-light.html
+++ b/index-light.html
@@ -791,7 +791,7 @@ button:hover .button-text {
 <!--About Start-->
 <section id="about" class="bg-light">
     <div class="container-fluid">
-            <h1 style="text-align: center; font-size: 350%">Find Your Personality Type</h1>
+            <h1 style="text-align: center; font-size: 350%">The Big Five Personality Test</h1>
             <p style="text-align: center; ">Understand your personality type deeply with the most comprehensive personality type test available online.</p><br><br>
         <div class="row align-items-center">
             <div class="col-lg-6 p-0">
@@ -802,9 +802,8 @@ button:hover .button-text {
                 <div class="about-box">
                     <div class="title">
                         <h6 class="third-color mb-3">PRICE: FREE BASIC REPORT</h6>
-                        <h3 class="mb-3">The TypeFinder® Personality Test</h3>
-                        <p>
-                        This updated and expanded edition of our bestselling TypeFinder assessment goes deeper than any personality test you've taken before. Based on original research into the nuances of personality type, the TypeFinder reveals not only your four-letter personality type code, but exactly how your one-of-a-kind personality profile fits within that type. Your results answer questions like:
+                        <h3 class="mb-3">The Big Five Personality Test</h3>
+                        <p>This free personality test gives you accurate scores for the Big Five personality traits. See exactly how you score for Openness, Conscientiousness, Extraversion, Agreeableness, and Neuroticism with this scientific personality assessment.</p>
 <br><br><ul style="list-style-type:disc;color: rgb(109, 109, 109); margin-left: 50px">
 <li>  How can I decide, once and for all, what my type is?</li>
 <li>Why are there some parts of my personality that don't seem to fit my type?</li>
@@ -845,7 +844,7 @@ The TypeFinder shows how the 23 facets of your personality make up your unique p
 </section>
 <section id="about" class="bg-light">
     <div class="container-fluid">
-            <h1 style="text-align: center; font-size: 350%">Find Your Personality Type</h1>
+            <h1 style="text-align: center; font-size: 350%">Brand Personality Test</h1>
             <p style="text-align: center; ">Understand your personality type deeply with the most comprehensive personality type test available online.</p><br><br>
         <div class="row align-items-center">
             <div class="col-lg-6 p-0">
@@ -856,7 +855,7 @@ The TypeFinder shows how the 23 facets of your personality make up your unique p
                 <div class="about-box">
                     <div class="title">
                         <h6 class="third-color mb-3">PRICE: FREE BASIC REPORT</h6>
-                        <h3 class="mb-3">The TypeFinder® Personality Test</h3>
+                        <h3 class="mb-3">Brand Personality Test</h3>
                         <p>
                         This updated and expanded edition of our bestselling TypeFinder assessment goes deeper than any personality test you've taken before. Based on original research into the nuances of personality type, the TypeFinder reveals not only your four-letter personality type code, but exactly how your one-of-a-kind personality profile fits within that type. Your results answer questions like:
 <br><br><ul style="list-style-type:disc;color: rgb(109, 109, 109); margin-left: 50px">
