Modal form changes

--- a/index-light.html
+++ b/index-light.html
@@ -161,8 +161,8 @@ button:hover .button-text {
 .form-structor {
   background-color: #222;
   border-radius: 15px;
-  height: 550px;
-  width: 350px;
+  height: 700px;
+  width: 100% ;
   position: relative;
   overflow: hidden;
 }
@@ -232,12 +232,12 @@ button:hover .button-text {
   outline: none;
   box-shadow: none;
   display: block;
-  height: 30px;
-  line-height: 30px;
+  height: 40px;
+  line-height: 50px;
   padding: 8px 15px;
   border-bottom: 1px solid #eee;
   width: 100%;
-  font-size: 12px;
+  font-size: 16px;
 }
 .form-structor .signup .form-holder .input:last-child {
   border-bottom: 0;
@@ -323,12 +323,12 @@ button:hover .button-text {
   outline: none;
   box-shadow: none;
   display: block;
-  height: 30px;
-  line-height: 30px;
+  height: 40px;
+  line-height: 50px;
   padding: 8px 15px;
   border-bottom: 1px solid #eee;
   width: 100%;
-  font-size: 12px;
+  font-size: 16px;
 }
 .form-structor .login .center .form-holder .input:last-child {
   border-bottom: 0;
@@ -723,7 +723,7 @@ button:hover .button-text {
                         <div class="modal-dialog">
                         
                           <!-- Modal content-->
-                          <div class="modal-content" >
+                          <div class="modal-content" style="max-width: 700px">
                             <div class="modal-header">
                               <button type="button" class="close" data-dismiss="modal">&times;</button>
                             </div>
