--- a/index-light.html
+++ b/index-light.html
@@ -9,7 +9,7 @@
     <!-- Page Title -->
     <title>LSI</title>
     <!-- Favicon -->
-    <link rel="icon" href="http://themesindustry.com/html/wexim-2020/images/favicon.ico">
+    <link rel="icon" href="./wilio/img/lsi_logo.png">
     <!-- Animate -->
     <link rel="stylesheet" href="http://themesindustry.com/html/wexim-2020/css/animate.min.css">
     <!-- Bootstrap CSS -->
@@ -395,7 +395,7 @@ button:hover .button-text {
     <!--Navigation-->
     <nav class="navbar navbar-top-default center-logo navbar-expand-lg navbar-simple navbar-dark nav-box-round">
         <div class="container">
-            <a href="javascript:void(0)" title="Logo" class="logo scroll" style='font-size:35px;margin-top:1px'>
+            <a href="./index-light.html" title="Logo" class="logo scroll" style='font-size:35px;margin-top:1px'>
                 <!--Logo Dark-->
                 LSI
             </a>
