--- a/wilio/Big_Five.html
+++ b/wilio/Big_Five.html
@@ -10,7 +10,7 @@
     <title>LSI | The Big Five Personality Test</title>
 
     <!-- Favicons-->
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/lsi_logo.png" type="image/x-icon">
     <link rel="apple-touch-icon" type="image/x-icon" href="img/apple-touch-icon-57x57-precomposed.png">
     <link rel="apple-touch-icon" type="image/x-icon" sizes="72x72" href="img/apple-touch-icon-72x72-precomposed.png">
     <link rel="apple-touch-icon" type="image/x-icon" sizes="114x114" href="img/apple-touch-icon-114x114-precomposed.png">
@@ -74,7 +74,7 @@
 		<div class="row row-height">
 			<div class="col-lg-6 content-left">
 				<div class="content-left-wrapper">
-					<a href="../index-light.html" id="logo"><img src="img/logo.png" alt="" width="49" height="35"></a>
+					<a href="../index-light.html" id="logo"><img src="./img/lsi_logo.png" alt="" width="49" height="35"></a>
 					<!-- <div id="social">
 						<ul>
 							<li><a href="#0"><i class="icon-facebook"></i></a></li>
