--- a/index-light.html
+++ b/index-light.html
@@ -9,11 +9,8 @@
     <!-- Page Title -->
     <title>LSI</title>
     <!-- Favicon -->
-<<<<<<< HEAD
     <link rel="icon" href="./wilio/img/lsi_logo.png">
-=======
-    <link rel="icon" href="./assets/favicon.ico">
->>>>>>> cc574ffc37769814fa3a1c1b8025de7b1b1b8667
+
     <!-- Animate -->
     <link rel="stylesheet" href="./assets/css/animate.min.css">
     <!-- Bootstrap CSS -->
@@ -27,7 +24,7 @@
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="./assets/css/font-awesome.min.css">
+    <link rel="stylesheet" href="./assets/font-awesome/css/font-awesome.min.css">
     <!-- Owl Carousel -->
     <link rel="stylesheet" href="./assets/css/owl.carousel.min.css">
     <link rel="stylesheet" href="./assets/css/owl.theme.default.min.css">
@@ -1629,7 +1626,7 @@ The TypeFinder shows how the 23 facets of your personality make up your unique p
                         <li><a class="wow fadeInDown" href="javascript:void(0);"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></li>
                     </ul>
                 </div>
-                <p class="company-about fadeIn">© 2019 Wexim. Made With Love By <a href="javascript:void(0);">Themesindustry</a></p>
+                <p class="company-about fadeIn">© 2020 LSI</p>
             </div>
         </div>
     </div>
