--- a/wilio/Brand_Personality.html
+++ b/wilio/Brand_Personality.html
@@ -403,7 +403,7 @@
 									</div>
 									<div class="form-group">
 										<label class="container_radio version_2">Very Strongly Agree
-											<input type="radio" name="question_5" value="Completely Satisfied" class="required" onchange="getVals(this, 'question_1');">
+											<input type="radio" name="question_5" value="Completely Satisfied" class="required" onchange="getVals(this, 'question_5');">
 											<span class="checkmark"></span>
 										</label>
 									</div>
@@ -1895,7 +1895,7 @@
 									</div>
 									<div class="form-group">
 										<label class="container_radio version_2">Moderately Agree
-											<input type="radio" name="37" value="Extremely Satisfied" class="required" onchange="getVals(this, 'question_37');">
+											<input type="radio" name="question_37" value="Extremely Satisfied" class="required" onchange="getVals(this, 'question_37');">
 											<span class="checkmark"></span>
 										</label>
 									</div>
