--- a/index-light.html
+++ b/index-light.html
@@ -461,7 +461,7 @@ button:hover .button-text {
 
             <div class="side-footer text-white w-100">
                 <ul class="social-icons-simple">
-                    <li><a href="javascript:void(0)"><i class="fas fa-band-aid"></i></a> </li>
+                    <li><a class="facebook-text-hvr" href="javascript:void(0)"><i class="fa fa-facebook"></i></a> </li>
                     <li><a class="instagram-text-hvr" href="javascript:void(0)"><i class="fa fa-instagram"></i> </a> </li>
                     <li><a class="twitter-text-hvr" href="javascript:void(0)"><i class="fa fa-twitter"></i> </a> </li>
                 </ul>
