--- a/index-light.html
+++ b/index-light.html
@@ -536,7 +536,7 @@ button:hover .button-text {
                          data-transform_out="s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;"
                          data-mask_in="x:0px;y:0px;s:inherit;e:inherit;"
                          data-start="1500" data-splitin="none" data-splitout="none">
-                        <p>Powerful, scientifically validated personality tests to help you grow and find your way in life.</p>
+                        <p style="width: 80%;">Powerful, scientifically validated personality tests to help you grow and find your way in life.</p>
                     </div>
                     <!-- LAYER NR. 5 -->
                     
@@ -700,6 +700,13 @@ button:hover .button-text {
                                 <div class="form-holder">
                                     <input type="text" class="input" placeholder="Name" />
                                     <input type="email" class="input" placeholder="Email" />
+                                    <select name="gender" id="gender" class="input" style="background-color: #fff; color: #969292;">
+                                        <option value="Male">Male</option>
+                                        <option value="Female">Female</option>
+                                        <option value="Other">Other</option>
+                                      </select>
+                                    <input type="city" class="input" placeholder="City" />
+                                    <input type="number" class="input" placeholder="Age" />
                                     <input type="password" class="input" placeholder="Password" />
                                 </div>
                                 <button class="submit-btn">Sign up</button>
