--- a/wilio/Big_Five.html
+++ b/wilio/Big_Five.html
@@ -74,7 +74,7 @@
 		<div class="row row-height">
 			<div class="col-lg-6 content-left">
 				<div class="content-left-wrapper">
-					<a href="../index-light.html" id="logo"><img src="./img/lsi_logo.png" alt="" width="49" height="35"></a>
+					<a href="../index-light.html" id="logo"><img src="./img/lsi_logo.png" alt="" width="49" height="35" style="width: 115px; height: 100px;"></a>
 					<!-- <div id="social">
 						<ul>
 							<li><a href="#0"><i class="icon-facebook"></i></a></li>
